namespace java com.twitter.auth.thrift.authorizationscopes
namespace py gen.twitter.auth.AuthorizationScopes
namespace rb AuthorizationScopes
#@namespace scala com.twitter.auth.authorizationscopes.thriftscala
#@namespace strato com.twitter.auth.authorizationscopes

/** deprecated */
enum AuthorizationScopes {
  RESERVED_1 = 1
  RESERVED_2 = 2
  RESERVED_3 = 3
  RESERVED_4 = 4
  RESERVED_5 = 5
  RESERVED_6 = 6
  RESERVED_7 = 7
  RESERVED_8 = 8
  RESERVED_9 = 9
  LEGACY_WRITE = 10 // previous reserved field will be used for testing
  LEGACY_READ = 11
  RESERVED_12 = 12
  RESERVED_13 = 13
  RESERVED_14 = 14
  RESERVED_15 = 15
  RESERVED_16 = 16
  RESERVED_17 = 17
  RESERVED_18 = 18
  RESERVED_19 = 19
  RESERVED_20 = 20
  // reserve more for future use when add new ones
}
